# deephelicon

./: .gitignore  README.md  Stage1_Call.py  Stage2_Call.py  pyproject.toml  requirements.txt  run_deephelicon.py  setup.py
.github/workflows/: deploy.yml  pypi.yml
data/input/: 2wsc2.evfold  2wsc2.fasta  2wsc2.plmc
deephelicon/: load.py  predict.py
deephelicon/util/: BPair.py  Console.py  DataInitializer.py  EVCouplingsModel.py  Fasta.py  FeatureS1.py  FeatureS2.py  Index.py  Irreflexive.py  Length.py  PFasta.py  Pair.py  Plmc.py  Position.py  Reader.py  Reformat.py  Segment.py  Separation.py  TMHMM.py  gdca.julia
docs/: developer.md  index.md  installation.md  jsun.bib  myst.yml  publication.md  spotlight.md  versions.md
docs/tutorial/: data.md  model.md  prediction.md
input/: 2wsc2.ccmpred  2wsc2.gdca  2wsc2.tmhmm
model/: README.md
output/: 2wsc2.deephelicon
src/: BPair_dhc_rs.py  DataInitializer_dhc_rs.py  Fasta_dhc_rs.py  Format_dhc_rs.py  Index_dhc_rs.py  Irreflexive_dhc_rs.py  Kind_dhc_rs.py  Length_dhc_rs.py  PFasta_dhc_rs.py  Pair_dhc_rs.py  Plmc_dhc_rs.py  Position_dhc_rs.py  Reader_dhc_rs.py  Segment_dhc_rs.py  Separation_dhc_rs.py  Stage1_dhc_rs.py  Stage2_dhc_rs.py  TMHMM_dhc_rs.py  troll.sh
