[project]
name = "deephelicon"
version = "0.0.1"
description = ""
authors = [
    {name = "Jianfeng Sun",email = "jianfeng.sunmt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "numpy (==2.1.3)",
    "tensorflow (==2.19)",
    "pandas (==2.2.3)",
    "joblib (==1.4.2)",
    "numba (>=0.61.0,<0.62.0)",
    "biopython (>=1.85,<2.0)",
    "pyfiglet (>=1.0.2,<2.0.0)",
    "click (>=8.1.8,<9.0.0)"
]

[tool.poetry.scripts]
deephelicon_s1 = "deephelicon.predict:rrc_s1"
deephelicon_s2 = "deephelicon.predict:rrc_s2"
deephelicon_fmt = "deephelicon.predict:op_format"
deephelicon_download = "deephelicon.predict:download"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
